26.06.2010:
	- made selection of SDL_Surface type even more flexible: USE_DOUBLEBUFFEREDSURFACE
	- slight rewrote of SDL graphics init routine

25.06.2010:
	- made selection of SDL_Surface type more flexible: USE_HARDWARESURFACE
	- added PHONY targets to the Makefiles

12.06.2010:
	- dropped highscore checksumming
	- save and load highscores to and from disk

10.04.2010:
	- use a timestamp as name for highscore entry

06.03.2010:
	- bugfixes highscore handling

05.03.2010:
	- introduced highscore handling module

09.02.2010:
	- introduced datatypes.h to encapsulate used data types
	- fixed instructions screen to be loaded from a graphic file (now fist onscreen properly)

05.02.2010:
	- ensure the TODO list is delivered with binary distributions for Wiz

30.01.2010:
	- move all screen handling into Graphics module for abstraction

29.01.2010:
	- v0.3 release version
	- small documentation fixes

27.01.2010:
	- added 24x24 pixel icon for GP2X Wiz
	- added GP2X Wiz specific README
	- added TODO list
	- updated the INSTALL file
	
26.01.2010:
	- added infrastructure for future Wiz release as ZIP file which can be directly unzipped to NAND or SD-Card

25.01.2010:
  - added support for window icon
  - moved loading of graphics resources into a subfunction Graphics_LoadGraphicsResource()
  - FIXED: missing SDL_FreeSurface calls in Graphics_CleanUp()
  - slight update of INSTALL and README documentation
  - updated copyright year in all source files 

24.01.2010:
	- added support for GP2X (clean up of Graphics module, disable mouse pointer if configured)

21.01.2010:
	- added a user interface module to handle menus, highscore inputs and display of various screens
	- fixed limit of maximum rotations (data type was to small to hold the intended amount, producing an overflow)

19.01.2010:
	- added dynamic sizes of graphics data
	- screen mode configurable by #define SCREENRES
	- added sysconfig.h to allow for port specific settings at compile time

15.11.2009: